# matches-shell

./: .gitignore  .gitlab-ci.yml  Allumettes.cbp  Allumettes.dev  Allumettes.layout  CMakeLists.txt  LICENSE.txt  Makefile.win  README.md  allumettes - jeu.h  allumettes - main.c  main.h
src/: CMakeLists.txt  allumettes - affichage.c  allumettes - affichage.h  allumettes - jeu.c  allumettes - main.c
